fix play/pause on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -241,4 +241,18 @@ canvas {
       display: none;
     }
   }
+
+  #all-stop {
+    &.fa-pause {
+      &:before {
+        margin-left: 0px;
+      }
+    }
+
+    &.fa-play {
+      &:before {
+        margin-left: 0px;
+      }
+    }
+  }
 }
